--- a/miaosha08/src/main/resources/templates/goods.html
+++ b/miaosha08/src/main/resources/templates/goods.html
@@ -46,7 +46,7 @@
                     <td th:text="${goods.stockCount}"></td>
                     <td th:text="${#dates.format(goods.startDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                     <td th:text="${#dates.format(goods.endDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                    <td><a th:href="'/goods/to/detail/' + ${goods.id}">详情</a></td>
+                    <td><a th:href="'/pages/goods_detail.htm?goodsId=' + ${goods.id}">详情</a></td>
                 </tr>
             </table>
         </div>
